# P2pCam

./: README.md
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/breeze/p2pcam/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: office_1080x1096.yuv
app/src/main/cpp/: RingBuffer.cpp  RingBuffer.h  native-lib.cpp  playback.cpp  vdecoder.cpp  vdecoder.h
app/src/main/java/com/breeze/nativelib/: GL2JNIView.java  NativeLib.java
app/src/main/java/com/breeze/opengl/: GLToolbox.java  MySurfaceView.java  TextureRenderer.java
app/src/main/java/com/breeze/p2pcam/: AddDeviceDialog.java  CamListFragment.java  DeviceList.java  LiveActivity.java  MainActivity.java  P2pClient.java  PlaybackFragment.java
app/src/main/java/com/breeze/tools/: FileData.java  RecordUtility.java  Utility.java  WifiList.java  WifiListActivity.java
app/src/main/java/com/breeze/youcam/: AddDeviceDialog.java  CamListFragment.java  DetailActivity.java  EventItem.java  EventList.java  EventListFragment.java  LiveActivity.java  PairingActivity.java  PlaybackActivity.java  PlaybackFragment.java  SearchFragment.java  SetupFragment.java  WifiSetupActivity.java
app/src/main/java/com/tutk/IOTC/: AVIOCTRLDEFs.java  IOTCAPIs.java
app/src/main/res/drawable/: page_bg.xml  panel_bg.xml
app/src/main/res/layout/: activity_detail.xml  activity_live.xml  activity_main.xml  activity_pairing.xml  activity_playback.xml  activity_wifi_setup.xml  capture.xml  dialog_add_device.xml  fragment_about.xml  fragment_cam_list.xml  fragment_event_list.xml  fragment_playback.xml  fragment_search.xml  fragment_setup.xml  list_device_view.xml  list_event_view.xml  list_wifi.xml
app/src/main/res/values/: colors.xml  dimen.xml  ids.xml  strings.xml  styles.xml
ffmpeg-android/include/libavcodec/: avcodec.h
ffmpeg-android/include/libavformat/: avformat.h
ffmpeg-android/include/libswscale/: swscale.h
gradle/wrapper/: gradle-wrapper.properties
